Do not add type barrier if instruction has expected type. (Bug 700211, r=sstangl)